<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Abunda Scanner</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_camera_preview">Camera Preview</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_lookup_and_add">Lookup And Add</string>
    <string name="Login">Login:</string>
    <string name="Password">Password:</string>
    <string name="login_splash">Login to AbuntaTrade</string>
    <string name="but_login">Login</string>
    <string name="nLogin">Just Scan</string>
    <string name="acct_create">Create Account</string>
    <string name="head_desc">Abunda Header</string>
    <string name="button_add">Add To List</string>
    <string name="autoadd_radio">Add All Items</string>
    <string name="check_remember">Remember Me</string>

    <color name="white">#FFFFFF</color>

    <string name="info">Info</string>
    <string name="log_out">Log Out</string>
    <string name="scan_again">Scan Again</string>
    <string name="options">Options</string>
    <string name="auto_add_on">Toggle Auto Add</string>
    <string name="auto_add_off">Turn off Auto Add to List</string>

</resources>