<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:gravity="center_horizontal"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Login" >

    <requestFocus />

    <CheckBox
        android:id="@+id/remember_check"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/pw_field"
        android:text="@string/check_remember" />

    <ImageView
        android:id="@+id/abunda_head"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:contentDescription="@string/head_desc"
        android:src="@drawable/abunda_header" />

    <TextView
        android:id="@+id/lab_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/abunda_head"
        android:layout_marginLeft="19dp"
        android:layout_toRightOf="@+id/abunda_head"
        android:text="@string/Login"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/lab_pw"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/lab_login"
        android:layout_below="@+id/login_field"
        android:text="@string/Password"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/login_field"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/lab_pw"
        android:layout_below="@+id/lab_login"
        android:ems="10"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/pw_field"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/lab_pw"
        android:layout_below="@+id/lab_pw"
        android:ems="10"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/but_cr_acct"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/but_login"
        android:layout_alignRight="@+id/but_nlogin"
        android:layout_below="@+id/but_login"
        android:text="@string/acct_create" />

    <Button
        android:id="@+id/but_nlogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/but_cr_acct"
        android:layout_alignRight="@+id/pw_field"
        android:text="@string/nLogin" />

    <Button
        android:id="@+id/but_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/remember_check"
        android:layout_toLeftOf="@+id/but_nlogin"
        android:text="@string/but_login" />

</RelativeLayout>